<resources>
    <string name="app_name">Grand Reunion</string>
    <string name="welcome">Welcome! Register to begin</string>
    <string name="fullname">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmpas">Confirm Password</string>
    <string name="register">Register</string>
    <string name="alreadyreg">Already registered? Sign in here</string>
    <string name="login">Login</string>
    <string name="needtoreg">Don\'t have an account? Register here</string>
    <string name="logout">Logout</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="main_home_action">Home</string>
    <string name="hereCode">Here is Your Group Code</string>
    <string name="enterCodeWelcome">Enter Join Code Here</string>
    <string name="enterGroupName">Enter Group Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
